--- a/flygaa_app/pubspec.yaml
+++ b/flygaa_app/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.5+2
   cloud_firestore: ^0.13.4+2
+  country_code_picker: ^1.3.6
+  google_sign_in: ^4.2.0
 
 dev_dependencies:
   flutter_test:
