--- a/flygaa_app/pubspec.yaml
+++ b/flygaa_app/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   country_code_picker: ^1.3.6
   google_sign_in: ^4.2.0
+  firebase_storage: ^3.1.5
+  image_picker: ^0.6.4
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/mainLogo.png
+   - assets/images/mountains.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
