Dev in Service Agent Level

--- a/platform/tour_organizers_app/flygaa_tour_organizer_app/android/app/src/main/AndroidManifest.xml
+++ b/platform/tour_organizers_app/flygaa_tour_organizer_app/android/app/src/main/AndroidManifest.xml
@@ -26,5 +26,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBCzEymZFqVBuvZ7b1Oz6vQTUM7tS91pxo" />
     </application>
 </manifest>
