--- a/platform/tour_organizers_app/flygaa_tour_organizer_app/pubspec.yaml
+++ b/platform/tour_organizers_app/flygaa_tour_organizer_app/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.5+3
   cloud_firestore: ^0.13.4+2
+  firebase_storage: ^3.1.5
+  image_picker: ^0.6.5
+  google_maps_flutter: ^0.0.3
+  flutter_google_places: ^0.1.4
   
 dev_dependencies:
   flutter_test:
